# get_weather

./: .gitignore  README.md  pyproject.toml
src/get_weather/: client.py
tests/: test_client.py
