[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "get_weather"
version = "0.1.0"
description = "A simple API key example package"
authors = [{ name="JP Talusan", email="jptalusan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["python-dotenv"]

[project.urls]
Homepage = "https://github.com/jptalusan/get_weather"

[tool.setuptools.packages.find]
where = ["src"]
